[package]
name = "enigma"
version = "0.1.0"
authors = ["Rafal Ochyra <aldaron127_dev@o2.pl>"]
edition = "2018"

[dependencies]
# logging
log = { version ="0.4.14", features = ["max_level_debug", "release_max_level_info"] }
simple_logger = "1.11.0"
# time
chrono = "0.4"
# cli-args // TODO should be only for CLI bin
structopt = "0.3"
